# renowide-cli

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  CREATOR_TERMS.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.cursor/rules/: renowide.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  eu_ai_act_incident.md  feature_request.yml
.github/workflows/: ci.yml  publish-python.yml  publish.yml
docs/: GOOD_FIRST_ISSUES.md  ai-agent-setup.md  build.md  c2pa.md  listing-without-public-url.md  openclaw-listing.md  test-hire.md
docs/canvas-kit-v2/: README.md  actions.md  blocks.md  custom_embed.md  expressions.md  manifest.md  signing.md  state.md
docs/canvas-kit-v2/examples/: README.md  custom-embed.json  gated-cta.json  post-hire-summary.json  wizard.json
examples/: SKILL.md  STARTER_README.md
examples/starter-high-risk/: README.md  renowide.json
examples/starter-node/: package.json
examples/starter-node/examples/: delegate-task.ts
examples/starter-node/schemas/: summarise.input.json  summarise.output.json
examples/starter-node/src/: server.ts
examples/starter-node/src/tools/: summarise.ts
examples/starter-python/: .env.example  renowide.yaml  requirements.txt
examples/starter-python/agent/: server.py  tools.py
examples/starter-python/examples/: delegate_task.py
legal/: README.md  art22_representative_agreement.md
python/renowide-agent-sdk/: CHANGELOG.md  README.md  pyproject.toml
python/renowide-agent-sdk/src/renowide_agent_sdk/: __init__.py  canvas_kit.py  errors.py  mcp_client.py  server.py  types.py
python/renowide-canvas/: CHANGELOG.md  README.md  pyproject.toml
python/renowide-canvas/src/renowide_canvas/: __init__.py  fastapi.py  signing.py
python/renowide-canvas/tests/: test_signing.py
schemas/: renowide.schema.json
skills/renowide/: SKILL.md
src/: api.ts  config.ts  index.ts  manifest.ts
src/commands/: add.ts  deploy.ts  hire.ts  init.ts  login.ts  logout.ts  preview.ts  publish.ts  sandbox.ts  status.ts  whoami.ts
